--- a/retriitti/src/fxRetriitti/WorkshopGUIView.fxml
+++ b/retriitti/src/fxRetriitti/WorkshopGUIView.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<BorderPane prefWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="fxRetriitti.WorkshopGUIController">
+<BorderPane prefWidth="300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.jyu.mit.fxgui.ModalController">
    <top>
       <Label text="Workshop" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -111,12 +110,12 @@
    <bottom>
       <HBox prefHeight="55.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" text="Tallenna">
+            <Button defaultButton="true" mnemonicParsing="false" onAction="#handleDefaultOK" text="Tallenna">
                <HBox.margin>
                   <Insets left="20.0" top="20.0" />
                </HBox.margin>
             </Button>
-            <Button cancelButton="true" mnemonicParsing="false" text="Peru">
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#handleDefaultCancel" text="Peru">
                <HBox.margin>
                   <Insets left="15.0" top="20.0" />
                </HBox.margin>
