--- a/retriitti/src/fxRetriitti/AloitusViewGUIView.fxml
+++ b/retriitti/src/fxRetriitti/AloitusViewGUIView.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxRetriitti.AloitusViewGUIController">
    <top>
       <Label text="Retriittitietokanta" BorderPane.alignment="CENTER">
          <font>
@@ -23,17 +22,17 @@
    <bottom>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Luo uusi" textAlignment="JUSTIFY">
+            <Button mnemonicParsing="false" onAction="#handleLuoUusi" text="Luo uusi" textAlignment="JUSTIFY">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button cancelButton="true" mnemonicParsing="false" text="   Peru   " textAlignment="JUSTIFY">
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#handlePeru" text="   Peru   " textAlignment="JUSTIFY">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button defaultButton="true" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="    OK    " textAlignment="JUSTIFY">
+            <Button defaultButton="true" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleOK" text="    OK    " textAlignment="JUSTIFY">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
