--- a/retriitti/src/fxRetriitti/OsallistujaGUIView.fxml
+++ b/retriitti/src/fxRetriitti/OsallistujaGUIView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<BorderPane minWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="fxRetriitti.OsallistujaGUIController">
+<BorderPane minWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="fi.jyu.mit.fxgui.ModalController">
    <top>
       <Label text="Osallistujan tiedot" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -100,12 +100,12 @@
    <bottom>
       <HBox prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" text="Tallenna">
+            <Button defaultButton="true" mnemonicParsing="false" onAction="#handleDefaultOK" text="Tallenna">
                <HBox.margin>
                   <Insets bottom="10.0" left="40.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button cancelButton="true" mnemonicParsing="false" text="Peru">
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#handleDefaultCancel" text="Peru">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
