--- a/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
+++ b/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
@@ -151,7 +151,7 @@
             <VBox prefHeight="480.0" prefWidth="267.0">
                <children>
                   <Label text="Workshopit" textAlignment="CENTER" />
-                 <StringGrid fx:id ="tableWorkshopit" prefHeight="400.0" prefWidth="296.0" rivit="Workshop | pvm | aika | kesto(h)&#10;Testaus | 12.6.22 | 14.00| 1&#10;Ihmettely | 12.6.22 |  20.00 | 3&#10;" />
+                 <StringGrid fx:id ="tableWorkshopit" prefHeight="400.0" prefWidth="296.0" rivit="Workshop | Paikka | max os | Ohjaaja" />
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#handleLisaaOsallistujalleWorkshop" text="Lisää">
