osallistujan lisaaminen ja muokkaus ok

--- a/retriitti/src/fxRetriitti/OsallistujaGUIView.fxml
+++ b/retriitti/src/fxRetriitti/OsallistujaGUIView.fxml
@@ -10,10 +10,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<BorderPane minWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="fxRetriitti.OsallistujaGUIController">
+<BorderPane stylesheets="@retriitti.css" minWidth="300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxRetriitti.OsallistujaGUIController">
    <top>
-      <Label fx:id = "labelVirhe" text="Osallistujan tiedot" BorderPane.alignment="CENTER">
+      <Label fx:id="labelVirhe" text="Osallistujan tiedot" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </BorderPane.margin>
@@ -32,6 +31,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints />
         </rowConstraints>
          <children>
             <Label text="Sukunimi:">
@@ -69,37 +69,37 @@
                   <Insets left="15.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id = "editSukunimi"  GridPane.columnIndex="1">
+            <TextField fx:id="editSukunimi" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id = "editEtunimi" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="editEtunimi" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id = "editHetu" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="editHetu" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </TextField>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField fx:id="editKatuosoite" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </TextField>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <TextField fx:id="editPostiosoite" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </TextField>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <TextField fx:id ="editPuhelin" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
                </TextField>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="6">
+                <TextField fx:id="editEmail" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
@@ -110,7 +110,7 @@
    <bottom>
       <HBox prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#handleOK" text="Tallenna">
+            <Button defaultButton="true" mnemonicParsing="false" onAction="#handleOK" text="OK">
                <HBox.margin>
                   <Insets bottom="10.0" left="40.0" right="10.0" top="10.0" />
                </HBox.margin>
