--- a/retriitti/src/fxRetriitti/retriitti.css
+++ b/retriitti/src/fxRetriitti/retriitti.css
@@ -1,1 +1,9 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+ .virhe {
+	/* @SupressWarning */
+	-fx-background-color: red;
+	}
+	
+ .normaali {
+	/* @SupressWarning */
+	-fx-background-color: white;
+	}
