--- a/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
+++ b/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
@@ -56,7 +56,6 @@
                   <MenuItem mnemonicParsing="false" onAction="#handlePoistaOsallistuja" text="Poista osallistuja..." />
                   <MenuItem mnemonicParsing="false" onAction="#handleLisaaWorkshop" text="Lisää uusi workshop" />
                   <MenuItem mnemonicParsing="false" onAction="#handlePoistaWorkshop" text="Poista workshop..." />
-                  <MenuItem mnemonicParsing="false" onAction="#handleMuokkaaOhjaaja" text="Lisää/Poista ohjaaja..." />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Apua">
@@ -76,7 +75,7 @@
                   <Label text="Osallistujat" BorderPane.alignment="CENTER" />
                </top>
                <center>
-                  <ListChooser fx:id="chooserOsallistujat" rivit="Kaali Heli&#10;Muikku Make&#10;Naakka Aimo&#10;" BorderPane.alignment="CENTER" />
+                  <ListChooser fx:id="chooserOsallistujat" BorderPane.alignment="CENTER" />
                </center>
                <bottom>
                   <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -127,13 +126,13 @@
                               <Label text="Postiosoite" GridPane.rowIndex="4" />
                               <Label text="Puhelin" GridPane.rowIndex="5" />
                               <Label text="Sähköposti" GridPane.rowIndex="6" />
-                              <TextField fx:id ="editSukunimi"   GridPane.columnIndex="1" />
-                              <TextField fx:id = "editEtunimi"   GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id = "editHetu"  GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField fx:id = "editKatuosoite" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField fx:id = "editPostiosoite" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField fx:id = "editPuhelin" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <TextField fx:id = "editEmail" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <TextField fx:id="editSukunimi" GridPane.columnIndex="1" />
+                              <TextField fx:id="editEtunimi" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="editHetu" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="editKatuosoite" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField fx:id="editPostiosoite" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField fx:id="editPuhelin" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <TextField fx:id="editEmail" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                               
                               
                            </children>
@@ -151,7 +150,7 @@
             <VBox prefHeight="480.0" prefWidth="267.0">
                <children>
                   <Label text="Workshopit" textAlignment="CENTER" />
-                 <StringGrid fx:id ="tableWorkshopit" prefHeight="400.0" prefWidth="296.0" rivit="Workshop | Paikka | max os | Ohjaaja" />
+                 <StringGrid fx:id="tableWorkshopit" prefHeight="400.0" prefWidth="296.0" rivit="Workshop | Paikka | max os | Ohjaaja" />
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#handleLisaaOsallistujalleWorkshop" text="Lisää">
