cbKentat nayttaa hakuehdot

--- a/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
+++ b/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import fi.jyu.mit.fxgui.ComboBoxChooser?>
 <?import fi.jyu.mit.fxgui.ListChooser?>
 <?import fi.jyu.mit.fxgui.StringGrid?>
 <?import javafx.geometry.Insets?>
@@ -80,16 +81,13 @@
                <bottom>
                   <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label minWidth="40.0" text="Haku:">
-                           <HBox.margin>
-                              <Insets top="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <TextField>
-                           <HBox.margin>
-                              <Insets top="10.0" />
-                           </HBox.margin>
-                        </TextField>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label minWidth="40.0" text="Haku:" />
+                              <ComboBoxChooser fx:id="cbKentat" maxWidth="200.0" onAction="#handleHakuehto" rivit="nimi hetu katuosoite postiosoite puhelin email" />
+                              <TextField fx:id="hakuehto" onKeyReleased="#handleHakuehto" />
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
                </bottom>
