--- a/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
+++ b/retriitti/src/fxRetriitti/RetriittiGUIView.fxml
@@ -33,7 +33,7 @@
       </HBox>
    </bottom>
    <top>
-      <MenuBar minWidth="930.0" BorderPane.alignment="CENTER">
+      <MenuBar minWidth="1200.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="Tiedosto">
             <items>
@@ -76,7 +76,7 @@
                   <Label text="Osallistujat" BorderPane.alignment="CENTER" />
                </top>
                <center>
-                  <ListChooser fx:id="chooserOsallistujat" BorderPane.alignment="CENTER" />
+                  <ListChooser fx:id="chooserOsallistujat" minWidth="156.0" prefHeight="346.0" prefWidth="156.0" BorderPane.alignment="CENTER" />
                </center>
                <bottom>
                   <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -97,7 +97,7 @@
                   <Label text="Osallistujan tiedot" BorderPane.alignment="CENTER" />
                </top>
                <center>
-                  <ScrollPane fx:id="panelOsallistuja" fitToWidth="true" maxWidth="400.0" minWidth="300.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+                  <ScrollPane fx:id="panelOsallistuja" fitToWidth="true" maxWidth="400.0" minWidth="300.0" prefHeight="462.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                      <content>
                         <GridPane hgap="10.0">
                           <columnConstraints>
@@ -124,13 +124,13 @@
                               <Label text="Postiosoite" GridPane.rowIndex="4" />
                               <Label text="Puhelin" GridPane.rowIndex="5" />
                               <Label text="Sähköposti" GridPane.rowIndex="6" />
-                              <TextField fx:id="editSukunimi" GridPane.columnIndex="1" />
-                              <TextField fx:id="editEtunimi" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="editHetu" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField fx:id="editKatuosoite" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField fx:id="editPostiosoite" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField fx:id="editPuhelin" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <TextField fx:id="editEmail" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <TextField fx:id="editSukunimi" editable="false" onMouseClicked="#handleMuokkaaOsallistuja" GridPane.columnIndex="1" />
+                              <TextField fx:id="editEtunimi" editable="false" onMouseClicked="#handleMuokkaaOsallistuja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="editHetu" editable="false" onMouseClicked="#handleMuokkaaOsallistuja" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="editKatuosoite" editable="false" onMouseClicked="#handleMuokkaaOsallistuja" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField fx:id="editPostiosoite" editable="false" onMouseClicked="#handleMuokkaaOsallistuja" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField fx:id="editPuhelin" editable="false" onMouseClicked="#handleMuokkaaOsallistuja" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <TextField fx:id="editEmail" editable="false" onMouseClicked="#handleMuokkaaOsallistuja" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                               
                               
                            </children>
@@ -148,7 +148,7 @@
             <VBox prefHeight="480.0" prefWidth="267.0">
                <children>
                   <Label text="Workshopit" textAlignment="CENTER" />
-                 <StringGrid fx:id="tableWorkshopit" prefHeight="400.0" prefWidth="296.0" rivit="Workshop | Paikka | max os | Ohjaaja" />
+                 <StringGrid fx:id="tableWorkshopit" minWidth="580.0" prefHeight="400.0" prefWidth="600.0" rivit="Workshop | Paikka | max os | Ohjaaja | Kesto | Pvm | klo" />
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#handleLisaaOsallistujalleWorkshop" text="Lisää">
