--- a/retriitti/src/fxRetriitti/TulostaViewGUIView.fxml
+++ b/retriitti/src/fxRetriitti/TulostaViewGUIView.fxml
@@ -2,16 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="fxRetriitti.TulostaViewGUIController">
+<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxRetriitti.TulostaViewGUIController">
    <top>
-      <Label text="Tulosta" BorderPane.alignment="CENTER">
+      <Label text="Osallistujalista" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -21,36 +20,25 @@
       </Label>
    </top>
    <center>
-      <BorderPane prefHeight="200.0" prefWidth="350.0" BorderPane.alignment="CENTER">
-         <top>
-            <Button mnemonicParsing="false" text="Retriitin osallistujalista" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </BorderPane.margin>
-            </Button>
-         </top>
-         <center>
-            <Label text="Workshopin osallitujalista:" BorderPane.alignment="CENTER" />
-         </center>
-         <bottom>
-            <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label text="Valitse workshop:  " textAlignment="RIGHT">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <padding>
-                        <Insets left="30.0" />
-                     </padding>
-                  </Label>
-                  <ChoiceBox prefWidth="150.0">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </ChoiceBox>
-               </children>
-            </HBox>
-         </bottom>
-      </BorderPane>
+   <TextArea fx:id="tulostusAlue" prefHeight="200.0" prefWidth="200.0" text="" BorderPane.alignment="CENTER">
+   </TextArea>
+     
    </center>
+   <bottom>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#handleTulosta" text="Tulosta">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#handleOK" text="OK">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+   </bottom>
+  
 </BorderPane>
